main.css
/* ... */
/* #endregion type */

/* #region nav */

nav {
    width: 100%;
    text-transform: uppercase;
    font-size: .75rem;
    line-height: 1rem;
    letter-spacing: 0.37em;
    font-weight: 300;
    font-style: normal;
    position: fixed;
    background-color: var(--dark);
    z-index: 1;
}

nav a, .main-nav--left a, .main-nav--right a {
    color: var(--light);
    text-decoration: none;
    text-transform: uppercase;
    font-size: .75rem;
    line-height: 1rem;
    letter-spacing: 0.37em;
    font-weight: 300;
    font-style: normal;
    transition: .5s ease;
}

.main-nav--left a:hover, .main-nav--left p:hover {
    color: var(--light);
    letter-spacing: .5em;
    transition: .5s ease;
    filter: blur(.5px);
    cursor: pointer;
}

.main-nav--right--effect {
    color: var(--light);
    letter-spacing: .5em;
    transition: .5s ease;
    filter: blur(.5px);
}

.main-nav {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 2rem;
    width: 100%;
    height: 5rem;
    min-height: 5rem;
    color: var(--light);
    border-bottom: 1px solid;
    border-color: var(--gold);
}

.main-nav--left {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 2rem;
    width: 100%;
    height: 100%;
    min-height: 5rem;
}

.main-nav--right {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 2rem;
    width: 13rem;
    height: 100%;
    border-left: 1px solid;
    border-color: var(--gold);
    padding-right: 3rem;
    overflow: visible;
}

.nav--dropdown {
    box-sizing: border-box;
    height: 5rem;
    width: 13rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-end;
    gap: 2rem;
    overflow: scroll;
    padding: 2rem 0;
    scroll-snap-type: y mandatory;
}

.nav--dropdown a {
    scroll-snap-align: center;
}

.nav--logo {
    height: 40%;
    padding-left: 3rem;
}
  
.nav--logo img {
    max-width: 100%;
    max-height: 100%;
}

.arrow-left {
    position: relative;
    top: 2rem;
    width: 0; 
    height: 0; 
    border-top: .5rem solid transparent;
    border-bottom: .5rem solid transparent; 
    border-left: .5rem solid #A69067;
}

/* #endregion nav */

/* #region sections */

.section-header {
    width: 100%;
}

.section-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    margin-top: 2rem;
    gap: 4rem;
}

.section-copy {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    font-family: 'Proxima Nova';
    font-style: normal;
    font-weight: 300;
    font-size: 1rem;
    line-height: 200%;
    letter-spacing: .05em;
    color: var(--light);
    text-align: justify;
}

.section-copy p {
    width: 35%;
}

.section-copy p:first-child:first-letter {
    float: left;
    font-family: broadsheet,serif;
    font-weight: 400;
    font-style: normal; 
    font-size: 3.75rem;
    line-height: 3rem;
    padding-right: .65rem;
}

.dropcap-black:first-child:first-letter {
    color: var(--dark);
}

.dropcap-gold:first-child:first-letter {
    color: var(--gold);
}

.section-img {
    width: fit-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-transform: uppercase;
    font-size: .75rem;
    line-height: 1rem;
    letter-spacing: 0.37em;
    font-weight: 300;
    font-style: normal;
    gap: 2rem;
    margin: 2rem 0;
}

.section-img img {
    min-width: auto;
    max-width: 80%;
    min-height: auto;
    max-height: 75vh;
}

/* #endregion sections */

/* #region citations */

.citations-container {
    position: absolute;
    top: 5rem;
    left: 0;
    z-index: 0;
    margin: 0;
    height: calc(100vh - 5rem);
    width: 100%;
    background-color: var(--dark);
    display: none;
    -webkit-transition: opacity .5s ease-in-out;
    -moz-transition: opacity .5s ease-in-out;
    -ms-transition: opacity .5s ease-in-out;
    -o-transition: opacity .5s ease-in-out;
    opacity: 0;
}

.citations-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.citations-headline {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    align-content: center;
    gap: .5rem;
    flex-basis: 20%;
    margin-top: 4rem;
}

.citations-headline-secondary {
    font-size: 2rem;
    line-height: 2rem;
    letter-spacing: 0.05em;
}

.citations-headline-primary {
    font-size: 4rem;
    line-height: 4rem;
    letter-spacing: -0.02em;
}

.citations-list {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 1rem;
    width: calc(100% - 16rem);
    flex-basis: 80%;
    height: 100%;
    overflow-y: auto;
    padding-bottom: 2rem;
}

.citations-item,
.citations-item a, 
.citations-item a:visited {
    line-height: 200%;
    color: var(--light);
} 

.citations-item p {
    margin-left: 3rem;
}

.citations-item p:first-child {
    margin-left: 0;
}

.citations-name {
    color: var(--gold);
    font-family: broadsheet,serif;
    font-weight: 400;
    font-style: normal;
    font-size: 1rem;
    line-height: 1rem;
    text-transform: uppercase;
    font-variant-numeric: oldstyle-nums;
    letter-spacing: .25rem;
}

/* #endregion citations */

/* decorations */

.line {
  background-color: var(--gold);
  width: 100%;
  min-height: .5px;
}

/* media */

video {
    height: 75vh;
}

.carousel {
    width: 80%;
    margin-top: 4rem;
    background-color: var(--dark);
}

ul.slides {
    display: block;
    position: relative;
    height: 75vh;
    margin: 0;
    padding: 0;
    overflow: hidden;
    list-style: none;
}
/* ... */

